# setup-environment-AgusMaff

./: CMakeLists.txt
.github/actions/building/: action.yml
.github/actions/coverage_and_test/: action.yml
.github/actions/documentation/: action.yml
.github/actions/style/: action.yml
include/: greetings.h  logic.h
libs/libdyn/: CMakeLists.txt
libs/libdyn/include/: shared.h
libs/libdyn/src/: shared.c
libs/libsta/: CMakeLists.txt
libs/libsta/include/: static.h
libs/libsta/src/: static.c
src/: greetings.c  logic.c  main.c
tests/: CMakeLists.txt
tests/unit/: test_unit_program.c
